--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,43 @@ dist.jar=${dist.dir}/CafeManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=D:\\downloads\\commons-beanutils-1.9.4.jar
+file.reference.commons-beanutils-1.9.4.jar-1=D:\\downloads\\jar files\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.2.jar=D:\\downloads\\commons-collections-3.2.2.jar
+file.reference.commons-collections-3.2.2.jar-1=D:\\downloads\\jar files\\commons-collections-3.2.2.jar
+file.reference.commons-collections4-4.2.jar=D:\\downloads\\commons-collections4-4.2.jar
+file.reference.commons-collections4-4.2.jar-1=D:\\downloads\\jar files\\commons-collections4-4.2.jar
+file.reference.commons-digester-2.1.jar=D:\\downloads\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=D:\\downloads\\jar files\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1.jar=D:\\downloads\\commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.1.jar-1=D:\\downloads\\jar files\\commons-logging-1.1.1.jar
+file.reference.ecj-3.21.0.jar=D:\\downloads\\ecj-3.21.0.jar
+file.reference.ecj-3.21.0.jar-1=D:\\downloads\\jar files\\ecj-3.21.0.jar
 file.reference.fontawesomefx-commons-9.1.2.jar=D:\\downloads\\fontawesomefx-commons-9.1.2.jar
+file.reference.fontawesomefx-commons-9.1.2.jar-1=D:\\downloads\\jar files\\fontawesomefx-commons-9.1.2.jar
 file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar=D:\\downloads\\fontawesomefx-fontawesome-4.7.0-9.1.2.jar
+file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar-1=D:\\downloads\\jar files\\fontawesomefx-fontawesome-4.7.0-9.1.2.jar
+file.reference.jackson-annotations-2.14.1.jar=D:\\downloads\\jackson-annotations-2.14.1.jar
+file.reference.jackson-annotations-2.14.1.jar-1=D:\\downloads\\jar files\\jackson-annotations-2.14.1.jar
+file.reference.jackson-core-2.14.1.jar=D:\\downloads\\jackson-core-2.14.1.jar
+file.reference.jackson-core-2.14.1.jar-1=D:\\downloads\\jar files\\jackson-core-2.14.1.jar
+file.reference.jackson-databind-2.14.1.jar=D:\\downloads\\jackson-databind-2.14.1.jar
+file.reference.jackson-databind-2.14.1.jar-1=D:\\downloads\\jar files\\jackson-databind-2.14.1.jar
+file.reference.jackson-dataformat-xml-2.14.1.jar=D:\\downloads\\jackson-dataformat-xml-2.14.1.jar
+file.reference.jackson-dataformat-xml-2.14.1.jar-1=D:\\downloads\\jar files\\jackson-dataformat-xml-2.14.1.jar
+file.reference.jasperreports-6.20.5.jar=D:\\downloads\\jasperreports-6.20.5.jar
+file.reference.jasperreports-6.20.5.jar-1=D:\\downloads\\jar files\\jasperreports-6.20.5.jar
+file.reference.jcommon-1.0.23.jar=D:\\downloads\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=D:\\downloads\\jar files\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=D:\\downloads\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=D:\\downloads\\jar files\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-8.0.33.jar=D:\\downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
+file.reference.openpdf-1.3.30.jaspersoft.2.jar=D:\\downloads\\openpdf-1.3.30.jaspersoft.2.jar
+file.reference.openpdf-1.3.30.jaspersoft.2.jar-1=D:\\downloads\\jar files\\openpdf-1.3.30.jaspersoft.2.jar
+file.reference.stax2-api-4.2.1.jar=D:\\downloads\\stax2-api-4.2.1.jar
+file.reference.stax2-api-4.2.1.jar-1=D:\\downloads\\jar files\\stax2-api-4.2.1.jar
+file.reference.woodstox-core-6.4.0.jar=D:\\downloads\\woodstox-core-6.4.0.jar
+file.reference.woodstox-core-6.4.0.jar-1=D:\\downloads\\jar files\\woodstox-core-6.4.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -44,7 +78,41 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
     ${file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar}:\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.ecj-3.21.0.jar}:\
+    ${file.reference.jackson-annotations-2.14.1.jar}:\
+    ${file.reference.jackson-core-2.14.1.jar}:\
+    ${file.reference.jackson-databind-2.14.1.jar}:\
+    ${file.reference.jackson-dataformat-xml-2.14.1.jar}:\
+    ${file.reference.jasperreports-6.20.5.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.openpdf-1.3.30.jaspersoft.2.jar}:\
+    ${file.reference.stax2-api-4.2.1.jar}:\
+    ${file.reference.woodstox-core-6.4.0.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar-1}:\
+    ${file.reference.commons-collections-3.2.2.jar-1}:\
+    ${file.reference.commons-collections4-4.2.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-logging-1.1.1.jar-1}:\
+    ${file.reference.ecj-3.21.0.jar-1}:\
+    ${file.reference.fontawesomefx-commons-9.1.2.jar-1}:\
+    ${file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar-1}:\
+    ${file.reference.jackson-annotations-2.14.1.jar-1}:\
+    ${file.reference.jackson-core-2.14.1.jar-1}:\
+    ${file.reference.jackson-databind-2.14.1.jar-1}:\
+    ${file.reference.jackson-dataformat-xml-2.14.1.jar-1}:\
+    ${file.reference.jasperreports-6.20.5.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.openpdf-1.3.30.jaspersoft.2.jar-1}:\
+    ${file.reference.stax2-api-4.2.1.jar-1}:\
+    ${file.reference.woodstox-core-6.4.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
